# brain

./: Cargo.toml  README.md  rustfmt.toml
data/: drugs.parquet
examples/sertraline/: abrupt_cessation.yml  hyperbolic_taper.yml  linear_taper.yml
scripts/: fetch.py  materialise.py
src/: brain.rs  drug.rs  main.rs  program.rs
