[package]
name = "brain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
indicatif = "0.18"
polars = { version = "0.49", features = ["lazy", "parquet"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
signal-hook = "0.3"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"